# claude-devtools-rs

./: .gitignore  .mcp.json  1  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  README.zh-CN.md  _HANDOFF.md  install.sh  justfile  manifest
crates/cdt-analyze/: Cargo.toml
crates/cdt-analyze/benches/: analyze_perf.rs
crates/cdt-analyze/src/: lib.rs  session_state.rs  test_support.rs  turn.rs
crates/cdt-analyze/src/chunk/: builder.rs  metrics.rs  mod.rs  promote.rs  semantic.rs
crates/cdt-analyze/src/context/: aggregator.rs  mod.rs  session.rs  stats.rs  types.rs
crates/cdt-analyze/src/team/: detection.rs  enrichment.rs  mod.rs  noise.rs  reply_link.rs  summary.rs
crates/cdt-analyze/src/tool_linking/: filter.rs  mod.rs  pair.rs  resolver.rs
crates/cdt-analyze/tests/: chunks.rs  context_tracking.rs
crates/cdt-analyze/tests/fixtures/: multi_ai.jsonl  simple.jsonl  with_compact.jsonl  with_tool_result.jsonl
crates/cdt-analyze/tests/snapshots/: chunks__compact_boundary_json.snap  chunks__compact_boundary_snapshot.snap  chunks__multi_assistant_coalescing_json.snap  chunks__multi_assistant_coalescing_snapshot.snap  chunks__simple_user_assistant_json.snap  chunks__simple_user_assistant_snapshot.snap  chunks__tool_result_paired_json.snap  chunks__tool_result_paired_snapshot.snap
crates/cdt-api/: Cargo.toml
crates/cdt-api/benches/: api_perf.rs
crates/cdt-api/examples/: verify_session.rs
crates/cdt-api/src/: cache_signature.rs  lib.rs  notifier.rs
crates/cdt-api/src/http/: bridge.rs  cors.rs  mod.rs  routes.rs  sse.rs  state.rs
crates/cdt-api/src/ipc/: backend_resolvers.rs  error.rs  events.rs  external_app.rs  image_disk_cache.rs  local.rs  mod.rs  parsed_message_cache.rs  path_resolve.rs  project_scan_cache.rs  session_metadata.rs  traits.rs  types.rs  workflow_manifest.rs  workflow_script.rs
crates/cdt-api/tests/: agent_configs.rs  config_round_trip_reflection.rs  contract_data.rs  corpus_q2_aionly.rs  corpus_turn_fidelity.rs  get_session_detail_with_teammate.rs  http_contract.rs  http_cors.rs  http_lazy_endpoints.rs  http_list_sessions_cache_hit_inline.rs  http_list_sessions_skeleton_then_sse.rs  http_session_detail_global_lookup.rs  http_static_serve.rs  ipc_contract.rs  list_group_sessions.rs  list_sessions_filtered.rs  local_generation_race.rs  nested_subagent_trace.rs  no_kind_compare_outside_resolvers.rs  notification_ops.rs  notifier_pipeline.rs  parsed_message_cache_invalidate.rs  perf_cold_scan.rs  perf_eager_first_page.rs  perf_fixture.rs  perf_get_session_detail.rs  perf_project_scan_cache.rs  perf_scanner_open_read.rs  perf_ssh_cache_hit.rs  perf_ssh_scanner_chunked_read.rs  project_scan_cache_invalidation.rs  session_metadata_stream.rs  sse_event_bridge.rs  ssh_reconnect_lifecycle.rs
crates/cdt-api/tests/common/: fake_remote_sftp.rs
crates/cdt-cli/: Cargo.toml
crates/cdt-cli/src/: completions.rs  cost.rs  export.rs  install.rs  lib.rs  main.rs  stats.rs  summary.rs  time_expr.rs  turn_api.rs  update.rs  view.rs
crates/cdt-cli/src/mcp/: mod.rs  redact.rs  truncate.rs
crates/cdt-cli/tests/: cli_help_snapshots.rs  cli_output.rs  mcp_integration.rs
crates/cdt-cli/tests/snapshots/: cli_help_snapshots__help_completions.snap  cli_help_snapshots__help_main.snap  cli_help_snapshots__help_mcp.snap  cli_help_snapshots__help_projects.snap  cli_help_snapshots__help_search.snap  cli_help_snapshots__help_self_update.snap  cli_help_snapshots__help_serve.snap  (+3 more)
crates/cdt-config/: Cargo.toml
crates/cdt-config/src/: claude_md.rs  defaults.rs  detected_error.rs  error.rs  error_detector.rs  error_trigger_checker.rs  lib.rs  manager.rs  mention.rs  notification_manager.rs  regex_safety.rs  trigger.rs  trigger_matcher.rs  types.rs  validation.rs
crates/cdt-config/tests/: round_trip.rs
crates/cdt-core/: Cargo.toml
crates/cdt-core/src/: chunk.rs  context.rs  job.rs  lib.rs  message.rs  process.rs  project.rs  search.rs  tokens.rs  tool_execution.rs  watch_event.rs  workflow.rs
crates/cdt-discover/: Cargo.toml
crates/cdt-discover/benches/: discover_perf.rs
crates/cdt-discover/src/: agent_configs.rs  error.rs  fs_provider.rs  lib.rs  path_compare.rs  path_decoder.rs  project_path_resolver.rs  project_scanner.rs  search_cache.rs  search_extract.rs  search_text.rs  session_search.rs  subproject_registry.rs  worktree_grouper.rs  wsl.rs
crates/cdt-discover/tests/: build_time_invariants.rs  project_scanner.rs  session_search.rs  worktree_grouper_dyn.rs
crates/cdt-fs/: ALLOWLIST.md  Cargo.toml
crates/cdt-fs/benches/: open_read_overhead.rs
crates/cdt-fs/src/: backend_policy.rs  context_id.rs  dir_entry.rs  error.rs  instrumentation.rs  kind.rs  lib.rs  local.rs  metadata.rs  provider.rs
crates/cdt-fs/tests/: no_pagination_in_trait.rs
crates/cdt-install/: Cargo.toml
crates/cdt-install/src/: error.rs  lib.rs
crates/cdt-parse/: Cargo.toml
crates/cdt-parse/benches/: parse_perf.rs
crates/cdt-parse/src/: dedupe.rs  error.rs  file.rs  lib.rs  noise.rs  parser.rs  shallow.rs
crates/cdt-parse/tests/: api_consistency.rs  dedupe.rs  parse_entry.rs  parse_file.rs
crates/cdt-query/: Cargo.toml
crates/cdt-query/src/: cost.rs  engine.rs  error.rs  extract.rs  filter.rs  lib.rs  options.rs  stats.rs  step.rs  summary.rs  token.rs  turn_view.rs
crates/cdt-query/tests/: query_filter.rs
crates/cdt-ssh/: Cargo.toml
crates/cdt-ssh/src/: auth.rs  config_parser.rs  connection.rs  error.rs  host_resolver.rs  lib.rs  polling_watcher.rs  provider.rs  request.rs  session.rs
crates/cdt-telemetry/: Cargo.toml
crates/cdt-telemetry/src/: counter.rs  event.rs  histogram.rs  lib.rs  registry.rs  snapshot.rs  tracing_layer.rs  wrappers.rs
crates/cdt-watch/: Cargo.toml
crates/cdt-watch/src/: error.rs  lib.rs  watcher.rs
crates/cdt-watch/tests/: file_watching.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: check_fs_direct_calls.rs  main.rs
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  server_mode.rs
(+1583 files in other folders)
