[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["src-tauri"]

[workspace.package]
version = "0.5.6"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/snowzhaozhj/claude-devtools-rs"
authors = ["zhaohejie"]

[workspace.dependencies]
# Shared crate interdeps — keep versions aligned here.
cdt-fs = { path = "crates/cdt-fs" }
cdt-core = { path = "crates/cdt-core" }
cdt-parse = { path = "crates/cdt-parse" }
cdt-analyze = { path = "crates/cdt-analyze" }
cdt-discover = { path = "crates/cdt-discover" }
cdt-watch = { path = "crates/cdt-watch" }
cdt-config = { path = "crates/cdt-config" }
cdt-ssh = { path = "crates/cdt-ssh" }
cdt-api = { path = "crates/cdt-api" }

# Runtime / infrastructure — only leaf crates add these as direct deps.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "process"] }
async-trait = "0.1"
sha2 = "0.11"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
filetime = "0.2"
dirs = "6"
notify = "8"
insta = { version = "1", features = ["yaml"] }
serial_test = "3"
dunce = "1"
lru = "0.18"
regex = "1"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
percent-encoding = "2"
syn = { version = "2", features = ["full", "parsing"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic opt-outs: these pedantic lints fire too often in idiomatic Rust without real benefit.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"

[profile.dev]
opt-level = 0
debug = true
# 关 incremental 缓存（典型占 2-5G/worktree）。sccache wrapper 跨 build/worktree 共享 rustc 输出，
# 命中率比 incremental 在单 target 内复用更高，多 worktree 场景整体反而更快。
incremental = false

# 依赖 crate 不带 debug info——target 体积大头（依赖 ~500 个 crate）。
# `*` 通配符在 cargo profile 里只匹配非 workspace 成员，workspace 内 crate（cdt-*）不受影响：
# 自己写的代码仍完整可调试，panic backtrace 行号完整。
# 若需排查 tokio/tauri 内部 panic，临时把这条改回 `debug = true` 重 build 一次即可恢复。
[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
