[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["src-tauri"]

[workspace.package]
version = "0.7.4"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/snowzhaozhj/claude-devtools-rs"
authors = ["zhaohejie"]

[workspace.dependencies]
# Shared crate interdeps — keep versions aligned here.
cdt-fs = { path = "crates/cdt-fs" }
cdt-install = { path = "crates/cdt-install" }
cdt-core = { path = "crates/cdt-core" }
cdt-parse = { path = "crates/cdt-parse" }
cdt-analyze = { path = "crates/cdt-analyze" }
cdt-discover = { path = "crates/cdt-discover" }
cdt-watch = { path = "crates/cdt-watch" }
cdt-config = { path = "crates/cdt-config" }
cdt-ssh = { path = "crates/cdt-ssh" }
cdt-api = { path = "crates/cdt-api" }
cdt-query = { path = "crates/cdt-query" }
cdt-telemetry = { path = "crates/cdt-telemetry" }

# Runtime / infrastructure — only leaf crates add these as direct deps.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "process"] }
async-trait = "0.1"
sha2 = "0.11"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Workflow script meta（`export const meta = {...}`）静态解析（Tier 1）：纯 Rust JSON5
# 解析器，无 build script / 无 C 依赖 / 无 Windows 跨平台风险（design D2 选型理由）。
json5 = "1.3"
serde_path_to_error = "0.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
filetime = "0.2"
dirs = "6"
notify = "8"
insta = { version = "1", features = ["yaml", "json", "filters"] }
serial_test = "3"
dunce = "1"
lru = "0.18"
regex = "1"
# 解析外部 CLI 绝对路径（修复 GUI app 不继承登录 shell PATH）；跨平台处理 Windows PATHEXT
which = "8.0.4"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tower-http = { version = "0.7", features = ["cors", "fs"] }
percent-encoding = "2"
syn = { version = "2", features = ["full", "parsing"] }
divan = "0.1"
crossbeam-queue = "0.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "~4.6", features = ["unstable-dynamic"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rmcp = { version = "2.1", features = ["server", "macros", "transport-io"] }
schemars = "1"
semver = "1"
flate2 = "1"
tar = "0.4"
zip = "8"
unicode-width = "0.2"
terminal_size = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic opt-outs: these pedantic lints fire too often in idiomatic Rust without real benefit.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"

[profile.dev]
opt-level = 0
debug = true
# 关 incremental 缓存（典型占 2-5G/worktree）。sccache wrapper 跨 build/worktree 共享 rustc 输出，
# 命中率比 incremental 在单 target 内复用更高，多 worktree 场景整体反而更快。
incremental = false
# 注意：cargo 在 incremental=false 时会把 codegen-units 默认降到 16（incremental=true 时默认 256），
# 多核机器 LLVM codegen 并行度会被砍。显式锁回 256 恢复 sccache 未命中时的并行度。
codegen-units = 256

# 依赖 crate 仅保留 line tables（文件名 + 行号 + 函数名），砍掉变量/类型/参数等占大头的
# debug 段——足够 panic backtrace / profiler 用源码定位，但不能 IDE 调试器看变量值。
# `*` 通配符在 cargo profile 里只匹配非 workspace 成员，workspace 内 crate（cdt-*）不受影响：
# 自己写的代码完整可调试 + backtrace 行号完整。
# 注意 src-tauri/ 是独立 workspace (`exclude = [...]`)，本条不影响 tauri 自身的依赖。
# 若需在 IDE 里单步看 tokio 等依赖内部变量值，临时改回 `debug = true` 重 build 一次即可恢复。
[profile.dev.package."*"]
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
