[package]
name = "claude-devtools-tauri"
version = "0.1.0"
description = "Claude DevTools desktop app"
authors = ["zhaohejie"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }

# Data layer crates
cdt-api = { path = "../crates/cdt-api" }
cdt-discover = { path = "../crates/cdt-discover" }
cdt-config = { path = "../crates/cdt-config" }
cdt-ssh = { path = "../crates/cdt-ssh" }
cdt-watch = { path = "../crates/cdt-watch" }
