[workspace]
# 显式声明 src-tauri 为独立子 workspace（Tauri 官方模板默认行为）。
# 必要性：git worktree 下 cargo 无法仅靠主仓库 root 的 exclude = ["src-tauri"]
# 排除 worktree 副本里的 src-tauri，会向上爬到原仓库 root 报错。
# 加上空块后 cargo 停在这里，主仓库 + 任意 worktree 都能 `cargo tauri dev`。

[package]
name = "claude-devtools-tauri"
version = "0.4.6"
description = "Claude DevTools desktop app"
authors = ["zhaohejie"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
dirs = "6"
semver = "1"
tracing = "0.1"

# Data layer crates
cdt-api = { path = "../crates/cdt-api" }
cdt-discover = { path = "../crates/cdt-discover" }
cdt-config = { path = "../crates/cdt-config" }
cdt-ssh = { path = "../crates/cdt-ssh" }
cdt-watch = { path = "../crates/cdt-watch" }
