[workspace]
# 显式声明 src-tauri 为独立子 workspace（Tauri 官方模板默认行为）。
# 必要性：git worktree 下 cargo 无法仅靠主仓库 root 的 exclude = ["src-tauri"]
# 排除 worktree 副本里的 src-tauri，会向上爬到原仓库 root 报错。
# 加上空块后 cargo 停在这里，主仓库 + 任意 worktree 都能 `cargo tauri dev`。

[package]
name = "claude-devtools-tauri"
version = "0.6.14"
description = "Claude DevTools desktop app"
authors = ["zhaohejie"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
dirs = "6"
semver = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Data layer crates
cdt-api = { path = "../crates/cdt-api" }
cdt-cli = { path = "../crates/cdt-cli" }
cdt-discover = { path = "../crates/cdt-discover" }
cdt-config = { path = "../crates/cdt-config" }
cdt-ssh = { path = "../crates/cdt-ssh" }
cdt-watch = { path = "../crates/cdt-watch" }
cdt-telemetry = { path = "../crates/cdt-telemetry" }

[dev-dependencies]
tempfile = "3"

# Dev profile 体积/速度优化（与根 Cargo.toml 同模式；src-tauri 独立 workspace 必须独立配）。
# 配合全局 ~/.cargo/config.toml 的 sccache rustc-wrapper 跨 build 共享缓存。
[profile.dev]
opt-level = 0
debug = true
# 关 incremental 缓存（src-tauri/target/debug/incremental 典型占 3-5G）。
incremental = false
# cargo 在 incremental=false 时 codegen-units 默认从 256 降到 16；显式锁回保留多核并行度。
codegen-units = 256

# 依赖 crate 仅保留 line tables——足够 panic backtrace 用源码定位，但不能 IDE 看变量值。
# `*` 在 src-tauri 这个 single-crate workspace 里匹配所有非 claude-devtools-tauri 的 crate，
# 包括 path dep `cdt-*`（它们在这个 workspace 视角下不是成员、是依赖）：所以 cargo tauri dev
# 上下文里 cdt-* 也只有 line tables。要调试 cdt-* 内部变量值请走 `cargo test -p cdt-x`
# （根 workspace），那里 cdt-* 是成员保留完整 debug info。
[profile.dev.package."*"]
debug = "line-tables-only"
