[package]
name = "cdt-analyze"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Chunk building, tool linking, context tracking, team metadata (owns 4 capabilities)."

[lints]
workspace = true

[dependencies]
cdt-core = { workspace = true }
cdt-parse = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
insta = { workspace = true }
tokio = { workspace = true }
