[package]
name = "cdt-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Data API facade: IPC trait surface + HTTP/SSE server (owns ipc-data-api + http-data-api)."

[lints]
workspace = true

[features]
# 仅供集成测试启用的 helpers（如 parsed-message cache 内部状态访问）；
# release / 默认构建 SHALL NOT 含这些 API。
test-utils = []

[dependencies]
cdt-core = { workspace = true }
cdt-parse = { workspace = true }
cdt-analyze = { workspace = true }
cdt-discover = { workspace = true }
cdt-watch = { workspace = true }
cdt-config = { workspace = true }
cdt-ssh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { version = "0.5", features = ["util"] }
futures = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
