[package]
name = "cdt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "claude-devtools-rs CLI entrypoint. Wires services and runs the API."

[[bin]]
name = "cdt"
path = "src/main.rs"

[lib]
name = "cdt_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cdt-api = { workspace = true }
cdt-core = { workspace = true }
cdt-query = { workspace = true }
cdt-fs = { workspace = true }
cdt-discover = { path = "../cdt-discover" }
cdt-config = { workspace = true }
cdt-ssh = { workspace = true }
cdt-watch = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
terminal_size = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cdt-{ target }{ archive-suffix }"
bin-dir = "cdt{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/cdt-windows-x64.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/cdt-darwin-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/cdt-darwin-x64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/cdt-linux-x64.tar.gz"

[dev-dependencies]
serde_json = { workspace = true }
rmcp = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["test-util"] }
