[package]
name = "cdt-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration, CLAUDE.md, triggers, error detection (owns configuration-management + notification-triggers)."

[lints]
workspace = true

[dependencies]
cdt-core = { workspace = true }
cdt-discover = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
lru = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
