[package]
name = "cdt-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSONL session parsing and message classification (owns session-parsing capability)."

[lints]
workspace = true

[dependencies]
cdt-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
