[package]
name = "cdt-watch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Debounced file system watching for Claude Code session files (owns file-watching)."

[lints]
workspace = true

[dependencies]
cdt-core = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
serial_test = { workspace = true }
