[package]
name = "cdt-watch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Debounced file system watching for Claude Code session files (owns file-watching)."

[lints]
workspace = true

[features]
# 仅供集成测试启用的 helpers（如 `file_tx_for_test` 让外部 crate test
# 直接 inject raw `FileChangeEvent` 不走 inotify / SSH polling 真路径）。
# release / 默认构建 SHALL NOT 含这些 API。
test-utils = []

[dependencies]
cdt-core = { workspace = true }
cdt-fs = { workspace = true }
cdt-discover = { workspace = true }
cdt-ssh = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
serial_test = { workspace = true }
